@@ -1,3 +1,8 @@
+2006-12-01  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* doc/wm.n, tests/winWm.test:
+	* win/tkWinWm.c: add -transparentcolor attribute for Windows.
+
 2006-11-30  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tkMacOSXDialog.c (Tk_MessageBoxObjCmd): fix inability to use
